--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -8629,7 +8629,7 @@
                             if (this.selectedFilter === 'anime') {
                                 return /^[0-9]+(\.[0-9]+)?$/.test(episode.EpisodeNumber);
                             } else if (this.selectedFilter === 'movies') {
-                                return episode.EpisodeNumber.includes("الفيلم");
+                                return episode.EpisodeNumber.includes("الفيلم") && !episode.EpisodeNumber.includes("خاصة بالفيلم");
                             } else if (this.selectedFilter === 'hourly_special') {
                                 return episode.EpisodeSpecial === "1"; // Filter for خاصة (ساعة)
                             } else if (this.selectedFilter === 'two_hour_special') {
