--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -6080,7 +6080,7 @@
                 groupedMovies() {
                     const chunkSize = 27;
                     return this.episodes
-                        .filter(e => e.EpisodeNumber.includes('الفيلم'))
+                        .filter(e => e.EpisodeNumber.includes('الفيلم') && !e.EpisodeNumber.includes('خاصة بالفيلم'))
                         .reduce((acc, _, i, arr) => (i % chunkSize) ? acc : 
                             [...acc, { 
                                 range: `${i+1}-${Math.min(i+chunkSize, arr.length)}`, 
