--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4855,7 +4855,7 @@
                                 <!-- Tooltip for Hourly Special -->
                                 <div class="tooltip-container flex items-center gap-2">
                                     <span class="w-6 h-6 bg-sky-800 rounded-full"></span>
-                                    <span>حلقة خاصة (ساعة)</span>
+                                    <span>خاصة (ساعة)</span>
                                     <span class="tooltip-text">
                                         حلقات تمتد لفترة أطول من الحلقة العادية التي مدتها 24 دقيقة، حيث يصل بعضها إلى ساعة ونصف
                                     </span>
@@ -4864,7 +4864,7 @@
                                 <!-- Tooltip for Two-Hour Special -->
                                 <div class="tooltip-container flex items-center gap-2">
                                     <span class="w-6 h-6 bg-orange-600 rounded-full"></span>
-                                    <span>حلقة خاصة (ساعتين)</span>
+                                    <span>خاصة (ساعتين)</span>
                                     <span class="tooltip-text">
                                         حلقات تمتد لفترة أطول من الحلقة العادية التي مدتها 24 دقيقة، حيث يصل بعضها إلى ساعتين ونصف
                                     </span>
@@ -4896,7 +4896,6 @@
                                         هي حلقات قصيرة تُعرف باسم «حلقات الأفلام الخاصة» أو «الملف السحري»، وتصل مدة عرضها إلى نحو 25 دقيقة.
                                     </span>
                                 </div>
-                        
                             </div>
                         </fieldset>
 
