--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5092,6 +5092,7 @@
                                     <span v-else-if="selectedEpisode.EpisodeNumber.includes('الفيلم')">رقم الفيلم:</span>
                                     <span v-else-if="selectedEpisode.EpisodeNumber.includes('قصة قصيرة')">رقم القصة القصيرة:</span>
                                     <span v-else-if="selectedEpisode.EpisodeNumber.includes('أوفا2')">رقم الأوفا الثانية:</span>
+                                    <span v-else-if="selectedEpisode.EpisodeNumber.includes('أوفا3')">رقم الأوفا الثانية:</span>
                                     <span v-else-if="selectedEpisode.EpisodeNumber.includes('أوفا')">رقم الأوفا:</span>
                                     <span v-else-if="selectedEpisode.EpisodeNumber.includes('إصدار خاص')">رقم الإصدار الخاص:</span>
                                     <span v-else>رقم الحلقة:</span>
@@ -5099,7 +5100,8 @@
                                          .replace('خاصة بالفيلم', '')
                                          .replace('الفيلم', '')
                                          .replace('قصة قصيرة', '')
-                                         .replace('2أوفا', '')
+                                         .replace('أوفا2', '')
+                                         .replace('أوفا3', '')
                                          .replace('أوفا', '')
                                          .replace('إصدار خاص', '')
                                          .trim() }}
@@ -5110,6 +5112,7 @@
                                     <span v-else-if="selectedEpisode.EpisodeNumber.includes('الفيلم')">نوع الفيلم: </span>
                                     <span v-else-if="selectedEpisode.EpisodeNumber.includes('قصة قصيرة')">نوع القصة القصيرة: </span>
                                     <span v-else-if="selectedEpisode.EpisodeNumber.includes('أوفا2')">نوع الأوفا الثانية: </span>
+                                    <span v-else-if="selectedEpisode.EpisodeNumber.includes('أوفا3')">نوع الأوفا الثانية: </span>
                                     <span v-else-if="selectedEpisode.EpisodeNumber.includes('أوفا')">نوع الأوفا: </span>
                                     <span v-else-if="selectedEpisode.EpisodeNumber.includes('إصدار خاص')">نوع الإصدار الخاص: </span>
                                     <span v-else>نوع الحلقة: </span>
