--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -14009,7 +14009,7 @@
                     let label = "رقم الحلقة:";
 
                     if (episodeNumber.includes("خاصة بالفيلم")) {
-                        label = "رقم الحلقة الخاصة(فيلم):";
+                        label = "رقم الحلقة الخاصة:";
                         episodeNumber = episodeNumber.replace("خاصة بالفيلم", "").trim();
                     } else if (episodeNumber.includes("الفيلم")) {
                         label = "رقم الفيلم:";
